--- a/package.json
+++ b/package.json
@@ -25,5 +25,13 @@
     "vue-router": "^3.5.1",
     "vue-template-compiler": "^2.6.12",
     "vuex": "^3.6.2"
+  },
+  "dependencies": {
+    "ant-design-vue": "^1.7.8",
+    "apexcharts": "^3.33.1",
+    "chart.js": "^3.7.1",
+    "filestack-js": "^3.25.0",
+    "vue-apexcharts": "^1.6.2",
+    "vue-chartjs": "^3.5.1"
   }
 }
